--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-hello world
+<!DOCTYPE html>
+<html>
+  <head>
+    <link rel="stylesheet" type="text/css" href="css/main.css"> 
+    <!-- 引用css檔案 -->
+
+    <title>Page Title</title>
+  </head>
+  <body>
+    <h1>My First Heading</h1>
+
+    <p><img src="img/aa.jpg" alt="WHEREAREYOU" width="42" height="82">I AMMMMMMMMM VALERIE My first paragraph.My first paragraph.My first paragraph.My first paragraph.</p>
+  </body>
+</html>
