site upload on 2017-11-27 00:03

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
   <body>
     <h1>My First Heading</h1>
 
-    <p><img src="img/aa.jpg" alt="WHEREAREYOU" width="42" height="82">I AMMMMMMMMM VALERIE My first paragraph.My first paragraph.My first paragraph.My first paragraph.</p>
+    <p><img src="img/aa.jpg" alt="WHEREAREYOU" width="42" height="82">UI DESIGNER</p>
   </body>
 </html>
