--- a/index.html
+++ b/index.html
@@ -11,4 +11,15 @@
 
     <p><img src="img/aa.jpg" alt="WHEREAREYOU" width="42" height="82">UI DESIGNER  Try Again about push</p>
   </body>
+  
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-127728045-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-127728045-1');
+  </script>
+
 </html>
