--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    
     <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-127728045-1"></script>
   <script>
@@ -11,15 +12,16 @@
     gtag('config', 'UA-127728045-1');
   </script>
 
-    <link rel="stylesheet" type="text/css" href="css/main.css"> 
     <!-- 引用css檔案 -->
-
+    <link rel="stylesheet" type="text/css" href="css/main.css"> 
     <title>Ui designer Valerie Tseng</title>
+    
   </head>
+  
   <body>
-    <h1>where is my new color</h1>
-
+    <h1>I dont know how to do</h1>
     <p><img src="img/aa.jpg" alt="WHEREAREYOU" width="42" height="82">UI DESIGNER  Try Again about push</p>
+ 
   </body>
   
   
