--- a/index.html
+++ b/index.html
@@ -30,27 +30,31 @@
 			</div>
 		</div>
 
-<div class="header">
-<!-- menu lg -->
-			<div class="header-color">
+  <div class="header">
+  <!-- menu lg -->
+	<div class="header-color">
 					
-							<ul class="menu">
-								<li class="menubtn"><a href="selected.html">蔬果嚴選</a></li>
-								<li class="menubtn"><a href="menu_1.html">蔬果癮</a></li>
-								<li class="menubtn"><a href="promise.html">品質保證</a></li>
-								<li class="menubtn"><a href="location.html">前往享受</a></li>
-								<li class="none"><a href="company.html">公司資訊</a></li>
-								<li class="none"><a href="contact.html">聯絡我們</a></li>
-							</ul>
-			</div>
-			
-<!-- menu hb -->
-		<div class="hb"><label for="menu-btn"><i class="fa fa-bars"></i></label></div>
+		<ul class="menu">
+		<li class="menubtn"><a href="selected.html">蔬果嚴選</a></li>
+		<li class="menubtn"><a href="menu_1.html">蔬果癮</a></li>
+		<li class="menubtn"><a href="promise.html">品質保證</a></li>
+		<li class="menubtn"><a href="location.html">前往享受</a></li>
+		<li class="none"><a href="company.html">公司資訊</a></li>
+		<li class="none"><a href="contact.html">聯絡我們</a></li>
+		</ul>
+		
+	</div>
+  <!-- menu hb -->
+	<div class="hb">
+		<label for="menu-btn">
+			<i class="fa fa-bars">
+			</i></label>
+	</div>
 
-</div>
+  </div>
 
 
-<!-- 第一區橫幅 -->
+  <!-- 第一區橫幅 -->
 <div class="container_block1">
 						
 		<div class="maintopic_bg_box" >
